--- a/String/index.html
+++ b/String/index.html
@@ -1,6 +1,6 @@
 <title>CS140 Lecture notes -- Random Numbers, Strings, Polymorphism, Exceptions</title>
 <body bgcolor=ffffff>
-<h1>CS140 Lecture notes -- Strings</h1>
+<h2>CS140 Lecture notes -- Random Numbers, Strings, Polymorphism, Exceptions</h2>
 <LI><a href=http://web.eecs.utk.edu/~jplank>Jim Plank</a>
 <LI>Directory: <b>~jplank/cs140/notes/String</b>
 <LI>Lecture notes:
